@@ -1,4 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
+
+2012-07-01 
+  * removed getComponents() method from WizardDialog and WizardGroupDialog in a
+    try to fix bug 3528917
+    
 2012-06-18 mentaer <sstein@geo.uzh.ch>
   * Fixed bug in OpenUMPSextanteRasterLayer, the cellSize needs to be provided 
     first, otherwise the row and column number of raster cells will be zero, due
